# basic_ai_agent

./: .env.example  README.md  pyproject.toml  requirements.txt
app/agents/: react_agent.py
app/config/: settings.py
app/core/: logging.py
app/models/: gemini.py
app/runners/: demo_agent.py  demo_direct.py
app/tools/: tavily_search.py
